<?xml version="1.0"?>
<package>
  <name>sim_general_control</name>
  <version>0.0.0</version>
  <description>The sim_general_control package</description>

  <maintainer email="archer7wang@outlook.com">archer</maintainer>

  <license>BSD</license>

  <author email="archer7wang@outlook.com">archer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>


  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>

</package>
